// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-1aa314g-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  border: 0;
}

.cache-1aa314g-Item:hover,
.cache-1aa314g-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1aa314g-Item:hover,
.cache-1aa314g-Item:focus {
  color: #390171;
}

.cache-1aa314g-Item:hover svg,
.cache-1aa314g-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1aa314g-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1aa314g-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Borderless Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-4z3b9a-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Default Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-1a79ivj-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #e6e9f0;
  border-color: #f6f6f8;
  box-shadow: none;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1a79ivj-Item:hover,
.cache-1a79ivj-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1a79ivj-Item:hover,
.cache-1a79ivj-Item:focus {
  color: #390171;
}

.cache-1a79ivj-Item:hover svg,
.cache-1a79ivj-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1a79ivj-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1a79ivj-Item:hover,
.cache-1a79ivj-Item:focus {
  color: #151a2d;
  background-color: #ffffff;
}

.cache-1a79ivj-Item:hover svg,
.cache-1a79ivj-Item:focus svg {
  fill: #151a2d;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-1a79ivj-Item"
    disabled=""
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Disabled Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant danger 1`] = `
<DocumentFragment>
  .cache-o6cct7-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  display: inline-block;
  color: #DD3252;
}

.cache-o6cct7-Item:hover,
.cache-o6cct7-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-o6cct7-Item:hover,
.cache-o6cct7-Item:focus {
  color: #390171;
}

.cache-o6cct7-Item:hover svg,
.cache-o6cct7-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-o6cct7-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-o6cct7-Item:hover,
.cache-o6cct7-Item:focus {
  color: #A6102D;
}

.cache-o6cct7-Item:hover svg,
.cache-o6cct7-Item:focus svg {
  fill: #A6102D;
}

.cache-o6cct7-Item svg {
  fill: #DD3252;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-o6cct7-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Danger
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant nav 1`] = `
<DocumentFragment>
  .cache-1mbql0y-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  font-size: 16px;
  line-height: 24px;
  color: #b2b6c3;
}

.cache-1mbql0y-Item:hover,
.cache-1mbql0y-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1mbql0y-Item:hover,
.cache-1mbql0y-Item:focus {
  color: #390171;
}

.cache-1mbql0y-Item:hover svg,
.cache-1mbql0y-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1mbql0y-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1mbql0y-Item:hover,
.cache-1mbql0y-Item:focus {
  color: #4f0599;
}

.cache-1mbql0y-Item:hover svg,
.cache-1mbql0y-Item:focus svg {
  fill: #4f0599;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-1mbql0y-Item"
    href="/test"
    role="menuitem"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Nav
    </div>
  </a>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1m7jw99-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1m7jw99-Popper:after {
  border-color: transparent;
}

.cache-1m7jw99-Popper:before {
  border-color: transparent;
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  bottom: 100%;
}

.cache-1m7jw99-Popper:after {
  border-bottom-color: #ffffff;
}

.cache-1m7jw99-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="bottom"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1m7jw99-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          bottom
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-18aeo6s-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-18aeo6s-Popper:after,
.cache-18aeo6s-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-18aeo6s-Popper:after {
  border-color: transparent;
}

.cache-18aeo6s-Popper:before {
  border-color: transparent;
}

.cache-18aeo6s-Popper:after {
  margin-left: -9px;
  right: 24px;
}

.cache-18aeo6s-Popper:before {
  margin-left: -11px;
  right: 24px;
}

.cache-18aeo6s-Popper:after,
.cache-18aeo6s-Popper:before {
  bottom: 100%;
}

.cache-18aeo6s-Popper:after {
  border-bottom-color: #ffffff;
}

.cache-18aeo6s-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-18aeo6s-Popper:after,
.cache-18aeo6s-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="bottom-end"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-18aeo6s-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          bottom-end
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1htcb69-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1htcb69-Popper:after,
.cache-1htcb69-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1htcb69-Popper:after {
  border-color: transparent;
}

.cache-1htcb69-Popper:before {
  border-color: transparent;
}

.cache-1htcb69-Popper:after {
  margin-right: -9px;
  left: 24px;
}

.cache-1htcb69-Popper:before {
  margin-right: -11px;
  left: 24px;
}

.cache-1htcb69-Popper:after,
.cache-1htcb69-Popper:before {
  bottom: 100%;
}

.cache-1htcb69-Popper:after {
  border-bottom-color: #ffffff;
}

.cache-1htcb69-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1htcb69-Popper:after,
.cache-1htcb69-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="bottom-start"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1htcb69-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          bottom-start
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1i41zkn-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1i41zkn-Popper:after,
.cache-1i41zkn-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1i41zkn-Popper:after {
  border-color: transparent;
}

.cache-1i41zkn-Popper:before {
  border-color: transparent;
}

.cache-1i41zkn-Popper:after,
.cache-1i41zkn-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1i41zkn-Popper:after,
.cache-1i41zkn-Popper:before {
  top: 100%;
}

.cache-1i41zkn-Popper:after {
  border-top-color: #eeeeff;
}

.cache-1i41zkn-Popper:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-1i41zkn-Popper:after,
.cache-1i41zkn-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="top"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1i41zkn-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          top
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-slfgs7-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 1px 5px 3px rgba(246,246,248,0.15);
}

.cache-slfgs7-Popper:after,
.cache-slfgs7-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-slfgs7-Popper:after {
  border-color: transparent;
}

.cache-slfgs7-Popper:before {
  border-color: transparent;
}

.cache-slfgs7-Popper:after {
  margin-left: -9px;
  right: 24px;
}

.cache-slfgs7-Popper:before {
  margin-left: -11px;
  right: 24px;
}

.cache-slfgs7-Popper:after,
.cache-slfgs7-Popper:before {
  top: 100%;
}

.cache-slfgs7-Popper:after {
  border-top-color: #eeeeff;
}

.cache-slfgs7-Popper:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-slfgs7-Popper:after,
.cache-slfgs7-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="top-end"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-slfgs7-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          top-end
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1yerxpg-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1yerxpg-Popper:after,
.cache-1yerxpg-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1yerxpg-Popper:after {
  border-color: transparent;
}

.cache-1yerxpg-Popper:before {
  border-color: transparent;
}

.cache-1yerxpg-Popper:after {
  margin-right: -9px;
  left: 24px;
}

.cache-1yerxpg-Popper:before {
  margin-right: -11px;
  left: 24px;
}

.cache-1yerxpg-Popper:after,
.cache-1yerxpg-Popper:before {
  top: 100%;
}

.cache-1yerxpg-Popper:after {
  border-top-color: #eeeeff;
}

.cache-1yerxpg-Popper:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-1yerxpg-Popper:after,
.cache-1yerxpg-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="top-start"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1yerxpg-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          top-start
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1m7jw99-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1m7jw99-Popper:after {
  border-color: transparent;
}

.cache-1m7jw99-Popper:before {
  border-color: transparent;
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  bottom: 100%;
}

.cache-1m7jw99-Popper:after {
  border-bottom-color: #ffffff;
}

.cache-1m7jw99-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1m7jw99-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1m7jw99-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1m7jw99-Popper:after {
  border-color: transparent;
}

.cache-1m7jw99-Popper:before {
  border-color: transparent;
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  bottom: 100%;
}

.cache-1m7jw99-Popper:after {
  border-bottom-color: #ffffff;
}

.cache-1m7jw99-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1a79ivj-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #c4c9d6;
  background-color: #e6e9f0;
  border-color: #f6f6f8;
  box-shadow: none;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1a79ivj-Item:hover,
.cache-1a79ivj-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1a79ivj-Item:hover,
.cache-1a79ivj-Item:focus {
  color: #390171;
}

.cache-1a79ivj-Item:hover svg,
.cache-1a79ivj-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1a79ivj-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-1a79ivj-Item:hover,
.cache-1a79ivj-Item:focus {
  color: #151a2d;
  background-color: #ffffff;
}

.cache-1a79ivj-Item:hover svg,
.cache-1a79ivj-Item:focus svg {
  fill: #151a2d;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu-1"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1m7jw99-Popper"
      role="menu"
    >
      <button
        aria-disabled="true"
        class="em6gco80 cache-1a79ivj-Item"
        disabled=""
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item disabled
        </div>
      </button>
      <button
        aria-disabled="true"
        class="em6gco80 cache-1a79ivj-Item"
        disabled=""
        role="menuitem"
        to="/link"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item Link disabled
        </div>
      </button>
      <button
        aria-disabled="true"
        class="em6gco80 cache-1a79ivj-Item"
        disabled=""
        href="https://link"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item Link disabled
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1m7jw99-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1m7jw99-Popper:after {
  border-color: transparent;
}

.cache-1m7jw99-Popper:before {
  border-color: transparent;
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  bottom: 100%;
}

.cache-1m7jw99-Popper:after {
  border-bottom-color: #ffffff;
}

.cache-1m7jw99-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-42or70-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-42or70-Item:hover,
.cache-42or70-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-42or70-Item:hover,
.cache-42or70-Item:focus {
  color: #390171;
}

.cache-42or70-Item:hover svg,
.cache-42or70-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-42or70-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu-1"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1m7jw99-Popper"
      role="menu"
    >
      <a
        aria-disabled="false"
        class="em6gco80 cache-42or70-Item"
        href="/link"
        role="menuitem"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item as Link
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with modal={false} 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-2"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1m7jw99-Popper {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1m7jw99-Popper:after {
  border-color: transparent;
}

.cache-1m7jw99-Popper:before {
  border-color: transparent;
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  bottom: 100%;
}

.cache-1m7jw99-Popper:after {
  border-bottom-color: #ffffff;
}

.cache-1m7jw99-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-1m7jw99-Popper:after,
.cache-1m7jw99-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-4z3b9a-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4a4f62;
  border: 0;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4z3b9a-Item:hover,
.cache-4z3b9a-Item:focus {
  color: #390171;
}

.cache-4z3b9a-Item:hover svg,
.cache-4z3b9a-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-4z3b9a-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu-2"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1m7jw99-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-4z3b9a-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          MenuItem
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    hidden=""
    id="menu"
    name="menu"
    role="dialog"
    style="display: none; position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  />
</DocumentFragment>
`;
